# SafeGBPO

./: .gitignore  .gitmodules  5_steps_viz.pt  fsnet5_steps_viz.pt  learning_evolution_viz.pt  pinet5_steps_viz.pt  pyproject.toml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
conf/: envs.py  learning_algorithms.py  safeguard.py
paper_archive/: figures.ipynb  for_practical_course.ipynb  practical_ws_2026.ipynb  viz_pinet.py
practical_archive_ws2026/: fsnet5_steps_viz.pt  pinet5_steps_viz.pt  practical_ws_2026.ipynb  runs_ids.csv  wandb_time_series.csv
src/: debug_fsnet.py  logger.py  main.py  review_logs.ipynb  utils.py
src/envs/: navigate_quadrotor.py  navigate_seeker.py  swingup_cartpole.py
src/envs/interfaces/: rci_env.py  safe_action_env.py  safe_state_env.py
src/envs/simulators/: cartpole.py  household.py  pendulum.py  quadrotor.py  seeker.py
src/learning_algorithms/: fsnet_debugger.py  ppo.py  sac.py  shac.py
src/learning_algorithms/components/: coupled_buffer.py
src/learning_algorithms/interfaces/: learning_algorithm.py
src/safeguards/: boundary_projection.py  fsnet.py  fsnet_test.py  fsnet_viz.py  pinet.py  pinetJAX.py  ray_mask.py
src/safeguards/fsnet_solvers/: anderson.py  cvxpy_solver.py  gradient_descent.py  lbfgs.py  lbfgs_torch_opt.py  lm.py
src/sets/: __init__.py  axis_aligned_box.py  ball.py  box.py  capsule.py  hyperplane.py  polytope.py  zonotope.py
src/sets/interface/: convex_set.py
tests/: env_test.py  linearisation_test.py  safe_action_set.py  safeguard_test.py  sets_test.py
toy_example/: viz_pinet.py
(+4 files in other folders)
