[project]
name = "SafeGBPO"
version = "1.0"
description = "Repository to Leveraging Analytical Gradients for Provably Safe Reinforcement Learning"
requires-python = ">=3.12"
dependencies = [
    "beartype>=0.21.0",
    "cvxpy>=1.7.3",
    "cvxpylayers>=0.1.9",
    "diffcp==1.1.4",
    "gymnasium>=1.2.0",
    "imageio[ffmpeg]>=2.37.0",
    "jaxlib==0.8.2",
    "jaxtyping>=0.3.2",
    "jax[cuda12]==0.8.2",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "optuna>=4.4.0",
    "pillow>=11.3.0",
    "pynvml",
    "pytest>=8.4.1",
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "wandb[media]>=0.21.1",
]
